--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
   </head>
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="rex" src=""></a-asset-item>
+        <img id="background" src="https://clipground.com/images/blue-blue-sky-clipart-15.jpg">
+        <a-asset-item id="rex" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/rex/rex.gltf"></a-asset-item>
       </a-assets>
+      <a-sky src="#background"></a-sky>
+      <a-entity id="cameraRig" position="0 -0.5 2">
+        <a-camera></a-camera>
+      </a-entity>
+      
+      <a-gltf-model scale="0.3 0.3 0.3" src="#rex" animation-mixer="clip: *;"></a-gltf-model>
     </a-scene>
   </body>
 </html>
