--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
       <a-assets>
         <img id="background" src="https://clipground.com/images/blue-blue-sky-clipart-15.jpg">
         <a-asset-item id="rex" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/rex/rex.gltf"></a-asset-item>
+        <a-asset-item id="hall" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/hall/hall.gltf"></a-asset-item>
       </a-assets>
-      <a-sky src="#background"></a-sky>
-      <a-entity id="cameraRig" position="0 -0.5 2">
+      <a-sky color="black"></a-sky>
+      <a-entity id="cameraRig" position="0 -4 -2" rotation="0 180 0" animation="property: position; delay: 1000; dur: 4000; easing: linear; to: 0 -0.5 -2">
         <a-camera></a-camera>
       </a-entity>
       
-      <a-gltf-model scale="0.3 0.3 0.3" src="#rex" animation-mixer="clip: *;"></a-gltf-model>
+      <a-gltf-model scale="0.3 0.3 0.3" rotation="0 180 0" src="#rex" animation-mixer="clip: *;"></a-gltf-model>
+      <a-gltf-model scale="1 1 1" position="0 1.344 0" rotation="180 -90 180" src="#hall"></a-gltf-model>
+      <a-box color="black" position="0 -2.533 -1.096" scale="5 5 1"></a-box>
     </a-scene>
   </body>
 </html>
