--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <a-scene>
       <a-assets>
         <img id="background" src="https://clipground.com/images/blue-blue-sky-clipart-15.jpg">
-        <a-asset-item id="gun" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/gun/scene.gltf"></a-asset-item>
+        <a-asset-item id="gun" src="./assets/gun/clonehandgun.gltf"></a-asset-item>
         <a-asset-item id="hall" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/hall/hall.gltf"></a-asset-item>
       </a-assets>
       <a-sky color="black"></a-sky>
       <a-entity id="cameraRig" movement-controls position="0 -6 -2" rotation="0 180 0" animation="property: position; delay: 1000; dur: 4000; easing: linear; to: 0 -0.5 -2">
         <a-camera></a-camera>
-        <a-entity scale="0.1 0.1 0.1" rotation="0 180 0" oculus-touch-controls="hand: left; model:false" gltf-model="#gun"></a-entity>
-        <a-entity scale="0.1 0.1 0.1" rotation="0 180 0" oculus-touch-controls="hand: right; model:false" gltf-model="#gun"></a-entity>
+        <a-entity oculus-touch-controls="hand: left; model:false" gltf-model="#gun"></a-entity>
+        <a-entity oculus-touch-controls="hand: right; model:false" gltf-model="#gun"></a-entity>
       </a-entity>
       
       <a-gltf-model scale="1 1 1" position="0 1.344 0" rotation="180 -90 180" src="#hall"></a-gltf-model>
