--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <!-- Camera -->
 
-    <a-entity id="cameraRig" movement-controls position="0 -7 -2" rotation="0 180 0"></a-entity>
+    <a-entity id="cameraRig" movement-controls position="0 -7 -2" rotation="0 180 0">
+      <a-camera></a-camera>
 
       <!-- Motion Controllers -->
 
