--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="gun" src="./assets/gun/clonehandgun.gltf"></a-asset-item>
+      <a-asset-item id="gun" src="./assets/gun/clonegun.glb"></a-asset-item>
       <a-asset-item id="hall" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/hall/hall.gltf">
       </a-asset-item>
       <a-asset-item id="bullet" src="./assets/gun/bullet/lazorbolt.gltf"></a-asset-item>
