--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="gun" src="./assets/gun/clonegun.glb"></a-asset-item>
+      <a-asset-item id="gun" src="./assets/gun/clonehandgun.gltf"></a-asset-item>
       <a-asset-item id="hall" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/hall/hall.gltf">
       </a-asset-item>
       <a-asset-item id="bullet" src="./assets/gun/bullet/lazorbolt.gltf"></a-asset-item>
@@ -20,7 +20,7 @@
 
     <!-- Camera -->
 
-    <a-entity id="cameraRig" movement-controls position="0 6 -2" rotation="0 180 0">
+    <a-entity id="cameraRig" movement-controls position="0 5 -2" rotation="0 180 0">
       <a-camera></a-camera>
 
       <!-- Motion Controllers -->
