--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -11,45 +12,32 @@
 <body>
   <a-scene>
     <a-assets>
-      <a-asset-item id="gun" src="./assets/gun/clonehandgun.gltf"></a-asset-item>
+      <a-asset-item id="gun" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/gun/clonehandgun.gltf"></a-asset-item>
       <a-asset-item id="hall" src="https://raw.githubusercontent.com/Dbald/Sandox/main/assets/hall/hall.gltf">
       </a-asset-item>
-      <a-asset-item id="bullet" src="./assets/gun/bullet/lazorbolt.gltf"></a-asset-item>
       <a-asset-item id="gunSound" src="./assets/gun/bullet/sound.ogg" response-type="arraybuffer"></a-asset-item>
     </a-assets>
 
     <!-- Camera -->
 
-    <a-entity id="cameraRig" movement-controls position="0 5 -2" rotation="0 180 0">
+    <a-entity id="cameraRig" movement-controls>
       <a-camera></a-camera>
 
       <!-- Motion Controllers -->
 
       <!-- Left -->
-      <a-entity id="leftGun" oculus-touch-controls="hand: left; model:false" gltf-model="#gun"
-        proxy-event__shoot="event: triggerdown; to: #leftGun; as: shoot"
-        proxy-event__shootsound="event: triggerdown; to: #soundShootLeft; as: shoot"
-        shooter="bulletTypes: normal; activeBulletType: normal">
-        <a-entity supercraft-thing="from: #supercraftThings; name: thing0; resetOrigin: true; ignorePosition: true" rotation="0 5 0" position="0 0 -0.03"></a-entity>
-        <a-entity id="soundShootLeft" sound="src: #gunSound; poolSize: 10; on: shoot; volume: 0.6"></a-entity>
-      </a-entity>
+      <a-entity id="leftGun" oculus-touch-controls="hand: left; model:false" gltf-model="#gun"></a-entity>
         <!-- Right -->
-      <a-entity id="rightGun" oculus-touch-controls="hand: right; model:false" gltf-model="#gun"
-        proxy-event__shoot="event: triggerdown; to: #rightGun; as: shoot"
-        proxy-event__shootsound="event: triggerdown; to: #soundShootRight; as: shoot"
-        shooter="bulletTypes: normal; activeBulletType: normal">
-        <a-entity supercraft-thing="from: #supercraftThings; name: thing0; resetOrigin: true; ignorePosition: true" rotation="0 5 0" position="0 0 -0.03"></a-entity>
-        <a-entity id="soundShootRight" sound="src: #gunSound; poolSize: 10; on: shoot; volume: 0.6"></a-entity>
-      </a-entity>
+      <a-entity id="rightGun" oculus-touch-controls="hand: right; model:false" gltf-model="#gun"></a-entity>
+    
+      <!-- Z -->
+    
     </a-entity>
 
     <!-- Environment -->
     <a-sky color="black"></a-sky>
     <a-gltf-model scale="1 1 1" position="0 1.344 0" rotation="180 -90 180" src="#hall"></a-gltf-model>
     <a-box color="black" position="0 -2.533 -1.096" scale="5 5 1"></a-box>
-
-    <a-entity bullet="name: normal; speed: 30.0; poolSize: 20" geometry="primitive: icosahedron; radius: 0.1;"
-    material="color: #FF7; emissiveIntensity: 0.5; emissive: #FF7"></a-entity>
 
   </a-scene>
 </body>
